--- a/Submition/index.html
+++ b/Submition/index.html
@@ -129,7 +129,7 @@
       </section>
 
       <section id="socials" class="socials-section">
-        <h2 class="section-title">My Socials <i class="fas fa-heart"></i></h2>
+        <h2 class="section-title">My Socials</i></h2>
 
         <p class="section-description">
           Connect with me on various social media platforms. Feel free to reach
