--- a/Submition/index.html
+++ b/Submition/index.html
@@ -11,7 +11,7 @@
     />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
     />
   </head>
   <body>
@@ -171,7 +171,7 @@
 
           <a href="#" class="social-card social-twitter">
             <div class="social-card-icon">
-              <i class="fab fa-twitter"></i>
+              <i class="fab fa-x-twitter"></i>
             </div>
             <div class="social-card-content">
               <h3 class="social-card-title">Twitter</h3>
@@ -254,7 +254,7 @@
                 ><i class="fab fa-discord"></i
               ></a>
               <a href="#"><i class="fab fa-instagram"></i></a>
-              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="#"><i class="fab fa-x-twitter"></i></a>
               <a href="#"><i class="fab fa-spotify"></i></a>
             </div>
           </div>
