--- a/Submition/index.html
+++ b/Submition/index.html
@@ -174,8 +174,8 @@
               <i class="fab fa-x-twitter"></i>
             </div>
             <div class="social-card-content">
-              <h3 class="social-card-title">Twitter</h3>
-              <p class="social-card-subtitle">Connect with me on Twitter</p>
+              <h3 class="social-card-title">X</h3>
+              <p class="social-card-subtitle">Connect with me on X</p>
             </div>
             <div class="social-card-arrow">
               <i class="fas fa-arrow-right"></i>
